--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   # MySQL Database Service
   mysql:
@@ -16,22 +14,27 @@ services:
       - mysql_data:/var/lib/mysql
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
 
   # Backend Service (Node.js)
   backend:
     build:
       context: . # Backend is in the root folder
-      dockerfile: Dockerfile.backend # Use the backend Dockerfile
+      dockerfile: Dockerfile # Use the backend Dockerfile
     container_name: node_backend
     environment:
-      DB_HOST: localhost
-      DB_USER: root
-      DB_PASSWORD: 12345678
-      DB_NAME: POS
+      MYSQL_ROOT_PASSWORD: 12345678 # Root user password
+      MYSQL_DATABASE: POS # Create this database
     ports:
       - "5030:5030"
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy # Wait for MySQL to be healthy
     networks:
       - app-network
 
@@ -39,7 +42,7 @@ services:
   frontend:
     build:
       context: ./client # Frontend is in the "client" folder
-      dockerfile: Dockerfile.frontend # Use the frontend Dockerfile
+      dockerfile: Dockerfile # Use the frontend Dockerfile
     container_name: react_frontend
     environment:
       REACT_APP_API_URL: http://localhost:5030 # Point frontend to backend API
